<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
app:cardCornerRadius="@dimen/_16sdp"
xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16sdp">

    <TextView
        android:id="@+id/update_brand_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_20ssp"
        android:maxLines="1"
        android:text="@string/update_brand"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etl_brand_name"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_brand_name"
        android:selectAllOnFocus="true"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:layout_constraintLeft_toLeftOf="@+id/update_brand_tv"
        app:layout_constraintRight_toRightOf="@+id/update_brand_tv"
        app:layout_constraintTop_toBottomOf="@+id/update_brand_tv"
        android:layout_marginTop="@dimen/_10sdp">
        <!--app:helperText="@string/prompt_first_name"-->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_brand_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textAllCaps="false"
        android:background="@drawable/bg_dialog_ok"
        android:layout_marginTop="@dimen/_32sdp"
        app:layout_constraintTop_toBottomOf="@+id/etl_brand_name"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/cencelBtn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/_32sdp"
        android:background="@drawable/bg_dialog_btn"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/etl_brand_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/updateBtn"
        android:layout_marginStart="@dimen/_16sdp"/>


</androidx.constraintlayout.widget.ConstraintLayout>





</androidx.cardview.widget.CardView>