<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

        <com.google.android.material.card.MaterialCardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            style="@style/CustomCardViewStyle"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_8sdp">

                <View
                    android:id="@+id/horizontal_bar"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_6sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@color/overlay_20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/brandNameInputLayout"
                    style="@style/Widget.Design.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:autofillHints="@string/brand_name"
                    android:hint="@string/brand_name"
                    android:selectAllOnFocus="true"
                    app:errorEnabled="true"
                    app:helperTextEnabled="true"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/horizontal_bar">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/brandNameEt"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameInputLayout"
                    style="@style/Widget.Design.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:autofillHints="@string/brand_name"
                    android:hint="@string/car_name"
                    android:selectAllOnFocus="true"
                    app:errorEnabled="true"
                    app:helperTextEnabled="true"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/brandNameInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameEt"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/descInputLayout"
                    style="@style/Widget.Design.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:autofillHints="@string/brand_name"
                    android:hint="@string/description"
                    android:selectAllOnFocus="true"
                    app:errorEnabled="true"
                    app:helperTextEnabled="true"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nameInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/descEt"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:layout_margin="@dimen/_10sdp"
                    android:backgroundTint="@color/white"
                    android:text="Save"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/red"
                    android:textSize="16sp"
                    app:cornerRadius="20dp"
                    app:strokeColor="@color/red"
                    app:strokeWidth="2dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/descInputLayout">

                </com.google.android.material.button.MaterialButton>



            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


</layout>


